Add ingredient list

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -13,5 +13,22 @@
     <p>As the sun dipped below the horizon, casting an amber glow over the bustling city, I found solace in the warm and welcoming embrace of my kitchen. Cooking has always been my sanctuary, a refuge from the whirlwind of life's demands. Today was no different. As I delved into the captivating world of culinary artistry, memories flooded my mind, transporting me back to cherished moments of shared laughter and delectable meals.</p>
     <p>One memory, in particular, stood out vividly from my childhood. It was a Sunday afternoon, and the intoxicating aroma of lasagna wafted through our home. The sound of joyful chatter echoed in the background as my family gathered around the table, eagerly anticipating the masterpiece that awaited. My mother's lasagna was a labor of love, carefully crafted layer by layer, with each ingredient infused with memories and affection. The first bite transported me to a realm of pure bliss, where tender pasta embraced a robust meat sauce, and the blend of melted cheeses danced upon my tongue. It was a moment of pure contentment, a taste of comfort and love that has stayed with me through the years.</p>
     <p>And so, as I sit here, indulging in the lasagna I created, I can't help but be filled with gratitude for the enduring power of food to connect us to our past, to evoke cherished memories, and to nurture our souls. The lasagna is not merely a dish; it's a vessel of nostalgia, carrying with it the flavors of my childhood and the love that has shaped me. It reminds me that the simple act of sharing a meal can create bonds that withstand the test of time, and that a single bite can transport us back to the warmth and joy of our most cherished memories.</p>
+    <h2>Ingredients</h2>
+    <ul>
+        <li>Lasagna noodles</li>
+        <li>Ground meat (beef, turkey, or a combination)</li>
+        <li>Onion, diced</li>
+        <li>Garlic, minced</li>
+        <li>Tomato sauce</li>
+        <li>Crushed tomatoes</li>
+        <li>Italian seasoning</li>
+        <li>Salt and pepper</li>
+        <li>Ricotta cheese</li>
+        <li>Parmesan cheese, grated</li>
+        <li>Fresh parsley, chopped</li>
+        <li>Mozzarella cheese, shredded</li>
+        <li>Olive oil (for cooking)</li>
+    </ul>
+    
 </body>
 </html>
