Add recipe steps

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -29,6 +29,18 @@
         <li>Mozzarella cheese, shredded</li>
         <li>Olive oil (for cooking)</li>
     </ul>
-    
+    <h2>Steps</h2>
+    <ol>
+        <li>Preheat your oven to the desired temperature.</li>
+        <li>Cook the ground meat in a skillet over medium heat until browned. Add diced onions and minced garlic, and continue cooking until the onions are softened.</li>
+        <li>Drain excess fat from the skillet. Add tomato sauce, crushed tomatoes, Italian seasoning, salt, and pepper to the meat mixture. Stir well to combine, and let it simmer for about 15-20 minutes to allow the flavors to meld together.</li>
+        <li>In a separate bowl, mix together ricotta cheese, grated Parmesan cheese, chopped parsley, salt, and pepper. Set aside.</li>        
+        <li>If using lasagna noodles that require boiling, cook them according to the package instructions. Otherwise, if using no-boil noodles, skip this step.</li>
+        <li>Assemble the lasagna: Start by spreading a thin layer of meat sauce at the bottom of a baking dish. Add a layer of lasagna noodles, followed by a layer of the ricotta cheese mixture, and a layer of shredded mozzarella cheese. Repeat the layers until all the ingredients are used, ending with a generous amount of mozzarella cheese on top.</li>
+        <li>Cover the baking dish with foil, ensuring it is sealed well to trap steam during baking.</li>
+        <li>Place the lasagna in the preheated oven and bake for the recommended time on the lasagna noodle package (usually around 40-50 minutes for regular noodles or as specified for no-boil noodles).</li>
+        <li>Remove the foil during the last 10 minutes of baking to allow the cheese to melt and develop a golden crust.</li>
+        <li>Once the lasagna is cooked, remove it from the oven and let it rest for a few minutes before slicing and serving. This allows the layers to settle and makes it easier to cut.</li>
+    </ol>
 </body>
 </html>
